# AmbisonicPowermapTest

./: .gitignore  CMakeLists.txt  README.md  ambisonicPowermapTest.c  build.sh
Spatial_Audio_Framework/: CMakeLists.txt
powermap/: powermap.c  powermap.h
